# generative_ai_advance_project

./: README.md  pyproject.toml
docker/: Dockerfile  compose.yaml
docs/architecture/: README.md
retrieval/: __init__.py  chunking.py  index.py  rerank.py  vectorstore.py
scripts/: build_index.py  run_local.sh
src/genai_project/: __init__.py
src/genai_project/api/: __init__.py  main.py  routes.py
src/genai_project/cli/: __init__.py  main.py
src/genai_project/core/: __init__.py  errors.py  logging.py  settings.py  telemetry.py
src/genai_project/eval/: __init__.py  metrics.py  runner.py
src/genai_project/eval/datasets/: sample.jsonl
src/genai_project/prompts/: __init__.py  registry.py
src/genai_project/prompts/fewshot/: qa_examples.jsonl
src/genai_project/prompts/system/: default.txt
src/genai_project/prompts/templates/: analysis.jinja2
src/genai_project/providers/: __init__.py
src/genai_project/providers/embeddings/: __init__.py  base.py  cohere_embed.py  openai_embed.py
src/genai_project/providers/llm/: __init__.py  anthropic_client.py  base.py  bedrock_client.py  openai_client.py
src/genai_project/storage/: __init__.py  blob.py  cache.py
src/genai_project/workflows/: __init__.py  tools.py
tests/: test_prompts.py  test_retrieval.py  test_workflows.py
